<resources>
    <string name="app_name">SrsRtcAndroidClient</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="loading">Loading…</string>
    <string name="prompt_user_id">User Id</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_user_type">User Type</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="empty_user_id"> user id is empty.</string>
    <string name="empty_password">password is empty.</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_user">Register?</string>
    <string name="user_info_not_obtained">user information not obtained!</string>
    <string name="login_succeeded">login succeeded</string>
    <string name="user_login">User Login</string>
    <string name="user_register">User Register</string>
    <string name="inconsistent_passwords">inconsistent passwords.</string>
    <string name="registration_success">registration success</string>
    <string name="select_call_user">Select Call User</string>
    <string name="confirm">Confirm</string>
    <string name="private_chat">Private Chat</string>
    <string name="group_chat">Group Chat</string>
    <string name="chat_room">Chat Room</string>
    <string name="enter_room_id">Enter Room Id</string>
    <string name="enter_the_room">Enter The Room</string>
    <string name="please_select_the_callee">Please select the callee.</string>
    <string name="check_srs_request_failure">Please check whether the streaming address already exists or whether there is H.264 information in SDP</string>
    <string name="mute">Mute</string>
    <string name="switch_camera">Switch camera</string>
    <string name="speaker">Speaker</string>
    <string name="hang_up">Hang up</string>
    <string name="answer">Answer</string>
    <string name="mine">Mine</string>
    <string name="invite_you_to_call">invite you to call</string>
    <string name="reject_call">reject call</string>
    <string name="accept_call">accept call</string>
    <string name="offline">offline</string>
    <string name="online">online</string>
    <string name="call_ended">Call ended.</string>
</resources>