<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.shencoder.srs_rtc_android_client.constant.SocketIoConnectionStatus" />

        <variable
            name="viewModel"
            type="com.shencoder.srs_rtc_android_client.ui.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".ui.main.MainActivity">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewBg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:background="@drawable/ic_white_corner_8_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_avatar01"
            app:layout_constraintStart_toStartOf="@id/viewBg"
            app:layout_constraintTop_toTopOf="@id/viewBg" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.userInfoField.username}"
            android:textColor="#393939"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/ivAvatar"
            app:layout_constraintTop_toTopOf="@id/ivAvatar" />

        <TextView
            android:id="@+id/tvUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.userInfoField.userId}"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/ivAvatar"
            app:layout_constraintStart_toStartOf="@id/tvUsername" />

        <ImageView
            android:id="@+id/ivConnectionStatus"
            android:layout_width="150dp"
            android:layout_height="53dp"
            android:layout_marginEnd="10dp"
            android:src="@{viewModel.connectionStatusField == SocketIoConnectionStatus.CONNECTED ? @drawable/ic_connected_status_bg : @drawable/ic_disconnected_status_bg}"
            app:layout_constraintBottom_toBottomOf="@id/ivAvatar"
            app:layout_constraintEnd_toEndOf="@id/viewBg"
            app:layout_constraintTop_toTopOf="@id/ivAvatar" />

        <TextView
            setDrawableStartCompat="@{viewModel.connectionStatusField == SocketIoConnectionStatus.CONNECTED ? @drawable/ic_connected_status : @drawable/ic_disconnected_status}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            android:text="@{viewModel.connectionStatusField.status}"
            android:textColor="@{viewModel.connectionStatusField == SocketIoConnectionStatus.CONNECTED ? @color/color_connected : @color/color_disconnected}"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/ivConnectionStatus"
            app:layout_constraintEnd_toEndOf="@id/ivConnectionStatus"
            app:layout_constraintStart_toStartOf="@id/ivConnectionStatus"
            app:layout_constraintTop_toTopOf="@id/ivConnectionStatus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPrivateChat"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/teal_200"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="@{()-> viewModel.privateChat()}"
            android:text="@string/private_chat"
            android:textSize="18sp"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toTopOf="@id/btnGroupChat"
            app:layout_constraintEnd_toEndOf="@id/viewBg"
            app:layout_constraintStart_toStartOf="@id/viewBg"
            app:layout_constraintTop_toBottomOf="@id/ivConnectionStatus"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGroupChat"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/teal_200"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="@{()-> viewModel.groupChat()}"
            android:text="@string/group_chat"
            android:textSize="18sp"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toTopOf="@id/btnChatRoom"
            app:layout_constraintEnd_toEndOf="@id/viewBg"
            app:layout_constraintStart_toStartOf="@id/viewBg"
            app:layout_constraintTop_toBottomOf="@id/btnPrivateChat" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChatRoom"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/teal_200"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="@{()-> viewModel.chatRoom()}"
            android:text="@string/chat_room"
            android:textSize="18sp"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="@id/viewBg"
            app:layout_constraintEnd_toEndOf="@id/viewBg"
            app:layout_constraintStart_toStartOf="@id/viewBg"
            app:layout_constraintTop_toBottomOf="@id/btnGroupChat" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>